# eucleia

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  Makefile  README.md  bazel-eucleia  eucleia  eucleia-formatting.plist
src/: BUILD.bazel  EucleiaInputStream.cpp  EucleiaInterpreter.cpp  EucleiaLibraries.cpp  EucleiaNode.cpp  EucleiaNode.hpp  EucleiaObject.cpp  EucleiaObject.hpp  EucleiaParser.cpp  EucleiaParser.hpp  EucleiaScope.cpp  EucleiaScope.hpp  EucleiaTokenizer.cpp  EucleiaTokenizer.hpp  RecognizedInputs.cpp  RecognizedInputs.hpp  eucleia.cpp  main.cpp
src/Nodes/: EucleiaLibraries.cpp  EucleiaNode.cpp  EucleiaNode.hpp
src/allocators/: PoolAllocator.cpp  PoolAllocator.hpp
src/datatypes/: ArrayObject.cpp  ArrayObject.hpp  FloatObject.cpp  FloatObject.hpp  FunctionObject.hpp  IntObject.hpp  LibraryFunctionObject.hpp  ObjectTypes.cpp  ObjectTypes.hpp  Objects.hpp  ReferenceObject.cpp  ReferenceObject.hpp  StringObject.hpp  StructDefinitionObject.hpp  StructObject.cpp  StructObject.hpp
src/dynamic_library/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.hpp
src/environment/: EucleiaScope.cpp  EucleiaScope.hpp  ExpressionScope.hpp  Scope.cpp  Scope.hpp
src/grammar/: EucleiaGrammar.cpp  EucleiaGrammar.hpp  Grammar.cpp  Grammar.hpp
src/input/: EucleiaInputStream.hpp
src/interpreter/: EucleiaInterpreter.cpp  EucleiaInterpreter.hpp
src/lexer/: CharStream.cpp  CharStream.hpp  EucleiaFileReader.cpp  EucleiaFileReader.hpp  EucleiaInputStream.cpp  EucleiaInputStream.hpp  EucleiaTokenizer.cpp  EucleiaTokenizer.hpp  InputStream.cpp  InputStream.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/main/: CLIParser.cpp  (+1 more)
(+298 files in other folders)
